# Custom_service_actions_checkpoint6

citylab_project/robot_patrol/: CMakeLists.txt  GoToPose.action  package.xml
citylab_project/robot_patrol/launch/: main.launch.py  start_direction_service.launch.py  start_gotopose_action.launch.py  start_patrolling.launch.py  start_test_service.launch.py
citylab_project/robot_patrol/src/: direction_service.cpp  go_to_pose_action.cpp  patrol.cpp  patrol_with_service.cpp  test_service.cpp
citylab_project/robot_patrol/srv/: GetDirection.srv
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
